@@ -1,3 +1,0 @@
-﻿[MASTER]
-
-optimize-ast=no
